<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loginregister.LoginFragment"
    android:background="@drawable/login_foreground">

    <TextView
        android:id="@+id/textViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:includeFontPadding="false"
        android:text="@string/logo"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="319dp"
        android:layout_height="55dp"
        android:layout_marginTop="99dp"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/textViewLogo"
        app:layout_constraintStart_toStartOf="@+id/textViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogo"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="319dp"
        android:layout_height="55dp"
        android:layout_marginTop="12dp"
        android:autofillHints="password"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/editEmailAddress"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/editEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editEmailAddress" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="55dp"
        android:backgroundTint="#0078D4"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editPassword"
        tools:text="@string/login" />

    <TextView
        android:id="@+id/nextToSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/noAcc"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/signInBtn"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/signInBtn"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn" />

    <TextView
        android:id="@+id/textForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/forgotPassword"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/nextToSignUp"
        app:layout_constraintStart_toStartOf="@+id/nextToSignUp"
        app:layout_constraintTop_toBottomOf="@+id/nextToSignUp"
        tools:text="@string/forgotPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>