<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.loginregister.ForgotFragment"
    android:background="@drawable/login_foreground">

    <TextView
        android:id="@+id/textViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:includeFontPadding="false"
        android:text="@string/logo"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.189" />

    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="319dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="src_in"
        android:ems="10"
        android:hint="@string/mail_forgot"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:visibility="visible" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="45dp"
        android:backgroundTint="#0078D4"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/submit"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editEmailAddress"
        tools:text="@string/submit" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/forgotPassword"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewLogo"
        app:layout_constraintStart_toStartOf="@+id/textViewLogo"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogo" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#0078D4"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/submitBtn"
        app:layout_constraintStart_toStartOf="@+id/submitBtn"
        app:layout_constraintTop_toBottomOf="@+id/submitBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>